# qclif

./: .gitignore  404.html  README.md  index.html  live.ipynb  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.py
clifford/: index.html
dnary/: index.html
dnary_arithmetic/: index.html
docs/: api.md  clifford.md  dnary.md  dnary_arithmetic.md  index.md  symplectic.md  usage.md
examples/: context.py  dnary-array.ipynb
qclif/: __init__.py  clifford.py  clifford_base.py  dnary_arithmetic.py  dnary_array.py  symplectic_array.py  version.py
qclif/_qclifBase/: dnary_arithmetic.py  dnary_array.py  symplectic_array_base.py
search/: search_index.json
symplectic/: index.html
tests/: test_clifford.py  test_dnary_array.py  test_dnary_logic.py  test_inheritance.py  test_sp.py  test_symplectic.py
usage/: index.html
